[package]
name = "rust-arduino-blink"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
panic-halt = "1.0.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "e29a7be"
features = ["arduino-uno"]
